<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    >

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/sample_popup_text"
        android:textAlignment="center"
        android:gravity="clip_horizontal"
        android:layout_marginTop="50dp"
        android:padding="25sp"
        android:textColor="#FFF"
        />

    <Button
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closebutton_text"
        android:layout_below="@id/continuarButton"
        android:background="@null"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:textAlignment="center"
        android:textColor="#FFF"
        />

    <Button
        android:id="@+id/continuarButton"
        android:text="@string/continuebutton_text"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

</RelativeLayout>